--- a/index.html
+++ b/index.html
@@ -1,87 +1,165 @@
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f9f9f9;
-    margin: 0;
-    padding: 0;
-  }
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Slide Guys Booking</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #f9f9f9;
+        margin: 0;
+        padding: 0;
+      }
 
-  .container {
-    max-width: 700px;
-    margin: 50px auto;
-    background: white;
-    border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 40px 30px;
-  }
+      .container {
+        max-width: 700px;
+        margin: 50px auto;
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        padding: 40px 30px;
+      }
 
-  .logo {
-    text-align: center;
-    margin-bottom: 20px;
-  }
+      .logo {
+        text-align: center;
+        margin-bottom: 20px;
+      }
 
-  .logo img {
-    width: 180px;
-    height: auto;
-  }
+      .logo img {
+        width: 180px;
+        height: auto;
+      }
 
-  h2 {
-    text-align: center;
-    color: #1b6ec2;
-    margin-bottom: 10px;
-  }
+      h2 {
+        text-align: center;
+        color: #1b6ec2;
+        margin-bottom: 10px;
+      }
 
-  p.instructions {
-    text-align: center;
-    font-size: 15px;
-    margin-bottom: 30px;
-  }
+      p.instructions {
+        text-align: center;
+        font-size: 15px;
+        margin-bottom: 30px;
+      }
 
-  .form-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
+      .form-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        margin-bottom: 20px;
+      }
 
-  input,
-  select {
-    width: 100%;
-    padding: 12px 16px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-    box-sizing: border-box;
-    height: 48px;
-  }
+      input,
+      select {
+        width: 100%;
+        padding: 12px 16px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+        box-sizing: border-box;
+        height: 48px;
+      }
 
-  .full-width {
-    grid-column: span 2;
-  }
+      .full-width {
+        grid-column: span 2;
+      }
 
-  button {
-    width: 100%;
-    padding: 14px;
-    background-color: #1b6ec2;
-    color: white;
-    font-size: 18px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    height: 50px;
-  }
+      button {
+        width: 100%;
+        padding: 14px;
+        background-color: #1b6ec2;
+        color: white;
+        font-size: 18px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        height: 50px;
+      }
 
-  button:hover {
-    background-color: #155da8;
-  }
+      button:hover {
+        background-color: #155da8;
+      }
 
-  @media (max-width: 600px) {
-    .form-grid {
-      grid-template-columns: 1fr;
-    }
+      @media (max-width: 600px) {
+        .form-grid {
+          grid-template-columns: 1fr;
+        }
 
-    .full-width {
-      grid-column: span 1;
-    }
-  }
-</style>
+        .full-width {
+          grid-column: span 1;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="logo">
+        <img src="https://slideguys-calendar.vercel.app/logo.png" alt="Slide Guys Logo" />
+      </div>
+      <h2>Slide Guys Booking</h2>
+      <p class="instructions">
+        Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.
+      </p>
+      <form id="booking-form">
+        <div class="form-grid">
+          <input type="text" id="name" placeholder="Full Name" required />
+          <input type="tel" id="phone" placeholder="Phone Number" required />
+          <input type="email" id="email" placeholder="Email" required />
+          <input type="text" id="address" placeholder="Address" required />
+          <select id="unit" required>
+            <option value="">Select Unit</option>
+            <option value="Unit 1">Unit 1</option>
+            <option value="Unit 2">Unit 2</option>
+            <option value="Unit 3">Unit 3</option>
+          </select>
+          <input type="date" id="date" required />
+        </div>
+        <button type="submit">Reserve</button>
+      </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+      (function () {
+        emailjs.init("PXm_wNk9aIao8Hlpp");
+      })();
+
+      document.getElementById("booking-form").addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const name = document.getElementById("name").value;
+        const phone = document.getElementById("phone").value;
+        const email = document.getElementById("email").value;
+        const address = document.getElementById("address").value;
+        const unit = document.getElementById("unit").value;
+        const date = document.getElementById("date").value;
+
+        const params = { name, phone, email, address, unit, date };
+
+        // Send to customer
+        emailjs.send("service_1zxrd0j", "template_nqep0gt", params).then(
+          function () {
+            console.log("Customer confirmation sent.");
+          },
+          function (error) {
+            console.error("Error sending customer email:", error);
+            alert("There was a problem sending the confirmation email.");
+          }
+        );
+
+        // Send to admin
+        emailjs.send("service_1zxrd0j", "template_6z2dcsj", params).then(
+          function () {
+            alert("Booking confirmed!");
+          },
+          function (error) {
+            console.error("Admin email error:", error);
+            alert("There was a problem sending the booking details to admin.");
+          }
+        );
+      });
+    </script>
+  </body>
+</html>
