--- a/index.html
+++ b/index.html
@@ -120,13 +120,22 @@
       </form>
     </div>
 
+    <!-- EmailJS -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <!-- Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <script>
       (function () {
         emailjs.init("PXm_wNk9aIao8Hlpp");
       })();
 
-      document.getElementById("booking-form").addEventListener("submit", function (e) {
+      const supabase = supabase.createClient(
+        'https://vaobmohukgcqfvnclqyh.supabase.co',
+        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M'
+      );
+
+      document.getElementById("booking-form").addEventListener("submit", async function (e) {
         e.preventDefault();
 
         const name = document.getElementById("name").value;
@@ -138,7 +147,25 @@
 
         const params = { name, phone, email, address, unit, date };
 
-        // Send to customer
+        // Step 1: Save to Supabase
+        const { data, error } = await supabase.from("bookings").insert([
+          {
+            name,
+            phone,
+            email,
+            address,
+            unit_id: unit, // change to "unit" if needed
+            date
+          }
+        ]);
+
+        if (error) {
+          console.error("Supabase insert error:", error);
+          alert("There was a problem saving your booking. Please try again.");
+          return;
+        }
+
+        // Step 2: Email to customer
         emailjs.send("service_1zxrd0j", "template_nqep0gt", params).then(
           function () {
             console.log("Customer confirmation sent.");
@@ -149,10 +176,11 @@
           }
         );
 
-        // Send to admin
+        // Step 3: Email to admin
         emailjs.send("service_1zxrd0j", "template_6z2dcsj", params).then(
           function () {
             alert("Booking confirmed!");
+            document.getElementById("booking-form").reset();
           },
           function (error) {
             console.error("Admin email error:", error);
