--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
     <script>
       // Initialize Supabase
       const client = supabase.createClient(
-        "https://vaobmohukgcqfvnclqyh.supabase.co", // replace with your Supabase URL
-        "your-anon-key-here" // replace with your actual anon key
+        "https://vaobmohukgcqfvnclqyh.supabase.co",
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M
+"
       );
 
       // Initialize EmailJS
