--- a/index.html
+++ b/index.html
@@ -2,192 +2,165 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Slide Guys Booking</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Slide Guys Admin Dashboard</title>
+    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css' rel='stylesheet' />
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background: #f9f9f9;
+        font-family: sans-serif;
         margin: 0;
-        padding: 0;
-      }
-
-      .container {
-        max-width: 700px;
-        margin: 50px auto;
-        background: white;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        padding: 40px 30px;
-      }
-
-      .logo {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-
-      .logo img {
-        width: 180px;
-        height: auto;
-      }
-
-      h2 {
-        text-align: center;
-        color: #1b6ec2;
-        margin-bottom: 10px;
-      }
-
-      p.instructions {
-        text-align: center;
-        font-size: 15px;
-        margin-bottom: 30px;
-      }
-
-      .form-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin-bottom: 20px;
-      }
-
-      input,
-      select {
-        width: 100%;
-        padding: 12px 16px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-        box-sizing: border-box;
-        height: 48px;
-      }
-
-      .full-width {
-        grid-column: span 2;
-      }
-
-      button {
-        width: 100%;
-        padding: 14px;
-        background-color: #1b6ec2;
+        background: #111;
         color: white;
-        font-size: 18px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        height: 50px;
       }
-
-      button:hover {
-        background-color: #155da8;
+      header {
+        padding: 1rem;
+        background-color: #222;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
-
-      @media (max-width: 600px) {
-        .form-grid {
-          grid-template-columns: 1fr;
-        }
-
-        .full-width {
-          grid-column: span 1;
-        }
+      header h1 {
+        margin: 0;
+        font-size: 1.5rem;
+      }
+      #login,
+      #dashboard {
+        padding: 2rem;
+      }
+      #calendar {
+        max-width: 900px;
+        margin: 2rem auto;
+        background: white;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        color: black;
+      }
+      .hidden {
+        display: none;
+      }
+      select {
+        padding: 0.5rem;
+        margin-left: 1rem;
       }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </head>
-
   <body>
-    <div class="container">
-      <div class="logo">
-        <img src="https://slideguys-calendar.vercel.app/logo.png" alt="Slide Guys Logo" />
+    <header>
+      <h1>Slide Guys Admin</h1>
+      <div>
+        <label for="unitFilter">Filter by unit:</label>
+        <select id="unitFilter">
+          <option value="all">All Units</option>
+        </select>
+        <button onclick="toggleCalendar()">Toggle Calendar</button>
+        <button onclick="logout()">Logout</button>
       </div>
-      <h2>Slide Guys Booking</h2>
-      <p class="instructions">
-        Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.
-      </p>
-      <form id="booking-form">
-        <div class="form-grid">
-          <input type="text" id="name" placeholder="Full Name" required />
-          <input type="tel" id="phone" placeholder="Phone Number" required />
-          <input type="email" id="email" placeholder="Email" required />
-          <input type="text" id="address" placeholder="Address" required />
-          <select id="unit" required>
-            <option value="">Select Unit</option>
-            <option value="Unit 1">Unit 1</option>
-            <option value="Unit 2">Unit 2</option>
-            <option value="Unit 3">Unit 3</option>
-          </select>
-          <input type="date" id="date" required />
-        </div>
-        <button type="submit">Reserve</button>
-      </form>
+    </header>
+
+    <div id="login">
+      <h2>Admin Login</h2>
+      <input type="email" id="email" placeholder="Email" /><br />
+      <input type="password" id="password" placeholder="Password" /><br />
+      <button onclick="login()">Login</button>
     </div>
 
+    <div id="dashboard" class="hidden">
+      <div id="calendar"></div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
     <script>
-      // Initialize Supabase
-      const client = supabase.createClient(
-        "https://vaobmohukgcqfvnclqyh.supabase.co",
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M"
+      const supabase = supabase.createClient(
+        'https://vaobmohukgcqfvnclqyh.supabase.co',
+        'public-anon-key-here'
       );
 
-      // Initialize EmailJS
-      (function () {
-        emailjs.init("PXm_wNk9aIao8Hlpp");
-      })();
+      const calendarEl = document.getElementById('calendar');
+      const loginDiv = document.getElementById('login');
+      const dashboardDiv = document.getElementById('dashboard');
+      const unitFilter = document.getElementById('unitFilter');
 
-      const form = document.getElementById("booking-form");
+      let calendar;
+      let bookings = [];
 
-      form.addEventListener("submit", async function (e) {
-        e.preventDefault();
+      async function login() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const { error } = await supabase.auth.signInWithPassword({ email, password });
+        if (error) return alert('Login failed: ' + error.message);
+        loginDiv.classList.add('hidden');
+        dashboardDiv.classList.remove('hidden');
+        loadUnits();
+        loadBookings();
+      }
 
-        const name = document.getElementById("name").value.trim();
-        const phone = document.getElementById("phone").value.trim();
-        const email = document.getElementById("email").value.trim();
-        const address = document.getElementById("address").value.trim();
-        const unit = document.getElementById("unit").value;
-        const date = document.getElementById("date").value;
+      function logout() {
+        supabase.auth.signOut();
+        loginDiv.classList.remove('hidden');
+        dashboardDiv.classList.add('hidden');
+      }
 
-        if (!name || !phone || !email || !address || !unit || !date) {
-          alert("Please fill in all fields.");
-          return;
-        }
+      function toggleCalendar() {
+        calendarEl.classList.toggle('hidden');
+      }
 
-        const params = { name, phone, email, address, unit, date };
+      async function loadUnits() {
+        const { data: units, error } = await supabase.from('units').select();
+        if (error) return console.error('Failed to load units:', error);
+        units.forEach(unit => {
+          const opt = document.createElement('option');
+          opt.value = unit.id;
+          opt.textContent = unit.name;
+          unitFilter.appendChild(opt);
+        });
+        unitFilter.addEventListener('change', filterBookings);
+      }
 
-        try {
-          // Check for duplicate booking
-          const { data: existing, error: existingError } = await client
-            .from("bookings")
-            .select("*")
-            .eq("unit", unit)
-            .eq("date", date);
+      async function loadBookings() {
+        const { data, error } = await supabase
+          .from('bookings')
+          .select('id, name, phone, email, address, date, unit_id, units(name)');
 
-          if (existingError) throw existingError;
+        if (error) return console.error('Failed to fetch bookings:', error);
+        bookings = data.map(b => ({
+          title: `${b.units.name} - ${b.name}`,
+          start: b.date,
+          extendedProps: {
+            ...b,
+          },
+        }));
 
-          if (existing.length > 0) {
-            alert("This unit is already booked for that date. Please choose another.");
-            return;
-          }
+        renderCalendar();
+      }
 
-          // Insert booking
-          const { error: insertError } = await client.from("bookings").insert([
-            { name, phone, email, address, unit, date }
-          ]);
+      function filterBookings() {
+        const unitId = unitFilter.value;
+        const filtered = unitId === 'all'
+          ? bookings
+          : bookings.filter(b => b.extendedProps.unit_id === unitId);
 
-          if (insertError) throw insertError;
+        calendar.removeAllEvents();
+        filtered.forEach(event => calendar.addEvent(event));
+      }
 
-          // Send confirmation to customer
-          await emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
-
-          // Send notification to admin
-          await emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
-
-          alert("✅ Booking confirmed! You will receive an email shortly.");
-          form.reset();
-        } catch (err) {
-          console.error("Booking failed:", err);
-          alert("There was an error saving your booking. Please try again.");
-        }
-      });
+      function renderCalendar() {
+        calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridMonth',
+          height: 'auto',
+          headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay',
+          },
+          events: bookings,
+          eventClick: function(info) {
+            const b = info.event.extendedProps;
+            alert(`Name: ${b.name}\nPhone: ${b.phone}\nEmail: ${b.email}\nAddress: ${b.address}\nUnit: ${b.units.name}`);
+          },
+        });
+        calendar.render();
+      }
     </script>
   </body>
 </html>
