--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         const phone = document.getElementById("phone").value;
         const email = document.getElementById("email").value;
         const address = document.getElementById("address").value;
-        const unit = document.getElementById("unit_id").value;
+        const unit = document.getElementById("unit").value;
         const date = document.getElementById("date").value;
 
         const params = { name, phone, email, address, unit, date };
