--- a/index.html
+++ b/index.html
@@ -1,170 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Slide Guys Booking</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #f9f9f9;
-        margin: 0;
-        padding: 0;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Slide Guys Booking</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+  <style>
+    body {
+      background: #f8f9fa;
+      padding: 2rem;
+      font-family: sans-serif;
+    }
+    .booking-box {
+      max-width: 600px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
 
-      .container {
-        max-width: 700px;
-        margin: 50px auto;
-        background: white;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        padding: 40px 30px;
-      }
+<div class="booking-box">
+  <img src="logo.png" alt="Slide Guys Logo" class="mx-auto d-block mb-3" style="max-height: 80px;" />
+  <h2>Slide Guys Booking</h2>
+  <p class="text-center">Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
 
-      .logo {
-        text-align: center;
-        margin-bottom: 20px;
-      }
+  <form id="booking-form">
+    <input type="text" class="form-control my-2" placeholder="Full Name" id="name" required />
+    <input type="text" class="form-control my-2" placeholder="Phone Number" id="phone" required />
+    <input type="email" class="form-control my-2" placeholder="Email" id="email" required />
+    <input type="text" class="form-control my-2" placeholder="Address" id="address" required />
 
-      .logo img {
-        width: 180px;
-        height: auto;
-      }
+    <select class="form-select my-2" id="unit" required>
+      <option value="">Select a unit</option>
+    </select>
 
-      h2 {
-        text-align: center;
-        color: #1b6ec2;
-        margin-bottom: 10px;
-      }
+    <input type="date" class="form-control my-2" id="date" required />
 
-      p.instructions {
-        text-align: center;
-        font-size: 15px;
-        margin-bottom: 30px;
-      }
+    <button type="submit" class="btn btn-primary w-100 mt-3">Reserve</button>
+  </form>
+</div>
 
-      .form-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin-bottom: 20px;
-      }
+<script>
+  // Initialize Supabase
+  const SUPABASE_URL = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+  const SUPABASE_ANON_KEY = 'YOUR_ANON_KEY_HERE';
+  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-      input,
-      select {
-        width: 100%;
-        padding: 12px 16px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-        box-sizing: border-box;
-        height: 48px;
-      }
+  // Populate unit dropdown
+  async function loadUnits() {
+    const unitSelect = document.getElementById('unit');
+    const { data: units, error } = await supabase.from('units').select('id, name');
 
-      .full-width {
-        grid-column: span 2;
-      }
+    if (error) {
+      console.error('Error loading units:', error.message);
+      return;
+    }
 
-      button {
-        width: 100%;
-        padding: 14px;
-        background-color: #1b6ec2;
-        color: white;
-        font-size: 18px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        height: 50px;
-      }
+    units.forEach(unit => {
+      const option = document.createElement('option');
+      option.value = unit.id; // UUID value
+      option.textContent = unit.name;
+      unitSelect.appendChild(option);
+    });
+  }
 
-      button:hover {
-        background-color: #155da8;
-      }
+  loadUnits();
 
-      @media (max-width: 600px) {
-        .form-grid {
-          grid-template-columns: 1fr;
-        }
+  // Handle booking submission
+  document.getElementById('booking-form').addEventListener('submit', async (e) => {
+    e.preventDefault();
 
-        .full-width {
-          grid-column: span 1;
-        }
-      }
-    </style>
-  </head>
+    const name = document.getElementById('name').value.trim();
+    const phone = document.getElementById('phone').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const address = document.getElementById('address').value.trim();
+    const unit = document.getElementById('unit').value;
+    const date = document.getElementById('date').value;
 
-  <body>
-    <div class="container">
-      <div class="logo">
-        <img src="https://slideguys-calendar.vercel.app/logo.png" alt="Slide Guys Logo" />
-      </div>
-      <h2>Slide Guys Booking</h2>
-      <p class="instructions">
-        Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.
-      </p>
-      <form id="booking-form">
-        <div class="form-grid">
-          <input type="text" id="name" placeholder="Full Name" required />
-          <input type="tel" id="phone" placeholder="Phone Number" required />
-          <input type="email" id="email" placeholder="Email" required />
-          <input type="text" id="address" placeholder="Address" required />
-          <select id="unit" required>
-            <option value="">Select Unit</option>
-            <option value="Unit 1">Unit 1</option>
-            <option value="Unit 2">Unit 2</option>
-            <option value="Unit 3">Unit 3</option>
-          </select>
-          <input type="date" id="date" required />
-        </div>
-        <button type="submit">Reserve</button>
-      </form>
-    </div>
+    if (!unit) {
+      alert('Please select a unit');
+      return;
+    }
 
-    <!-- EmailJS -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    const { error } = await supabase.from('bookings').insert([
+      { name, phone, email, address, unit, date }
+    ]);
 
-    <!-- Supabase v2 using ESM (module script) -->
-    <script type="module">
-      import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+    if (error) {
+      console.error('Supabase insert error:', error.message);
+      alert('Booking failed. Please try again.');
+    } else {
+      alert('Booking successful!');
+      document.getElementById('booking-form').reset();
+    }
+  });
+</script>
 
-      // Initialize EmailJS
-      emailjs.init("PXm_wNk9aIao8Hlpp");
-
-      const supabase = createClient(
-        'https://vaobmohukgcqfvnclqyh.supabase.co',
-        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M'
-      );
-
-      document.getElementById("booking-form").addEventListener("submit", async function (e) {
-        e.preventDefault();
-
-        const name = document.getElementById("name").value;
-        const phone = document.getElementById("phone").value;
-        const email = document.getElementById("email").value;
-        const address = document.getElementById("address").value;
-        const unit = document.getElementById("unit").value;
-        const date = document.getElementById("date").value;
-
-        const params = { name, phone, email, address, unit_id: unit, date };
-
-        const { error } = await supabase.from("bookings").insert([params]);
-
-        if (error) {
-          console.error("Supabase insert error:", error);
-          alert("There was a problem saving your booking. Please try again.");
-          return;
-        }
-
-        try {
-          await emailjs.send("service_1zxrd0j", "template_nqep0gt", params); // customer
-          await emailjs.send("service_1zxrd0j", "template_6z2dcsj", params); // admin
-          alert("Booking confirmed!");
-          document.getElementById("booking-form").reset();
-        } catch (err) {
-          console.error("EmailJS error:", err);
-          alert("Booking saved but failed to send confirmation email.");
-        }
-      });
-    </script>
-  </body>
+</body>
 </html>
