--- a/index.html
+++ b/index.html
@@ -4,106 +4,102 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-  <style>
-    body {
-      background: #f8f9fa;
-      padding: 2rem;
-      font-family: sans-serif;
-    }
-    .booking-box {
-      max-width: 600px;
-      margin: auto;
-      padding: 2rem;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-  </style>
 </head>
-<body>
+<body style="background-color: #f8f9fa;">
 
-<div class="booking-box">
-  <img src="logo.png" alt="Slide Guys Logo" class="mx-auto d-block mb-3" style="max-height: 80px;" />
-  <h2>Slide Guys Booking</h2>
-  <p class="text-center">Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
+  <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="card shadow p-4" style="width: 100%; max-width: 500px;">
+      <div class="text-center">
+        <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3" />
+        <h2>Slide Guys Booking</h2>
+        <p>Select a unit and the date you would like to reserve. No cancellations. <br>Rescheduling is subject to availability.</p>
+      </div>
 
-  <form id="booking-form">
-    <input type="text" class="form-control my-2" placeholder="Full Name" id="name" required />
-    <input type="text" class="form-control my-2" placeholder="Phone Number" id="phone" required />
-    <input type="email" class="form-control my-2" placeholder="Email" id="email" required />
-    <input type="text" class="form-control my-2" placeholder="Address" id="address" required />
+      <form id="booking-form">
+        <input type="text" class="form-control mb-2" id="name" placeholder="Your Name" required />
+        <input type="tel" class="form-control mb-2" id="phone" placeholder="Phone Number" required />
+        <input type="email" class="form-control mb-2" id="email" placeholder="Email" required />
+        <input type="text" class="form-control mb-2" id="address" placeholder="Address" required />
+        
+        <select class="form-select mb-2" id="unit" required>
+          <option value="">Select a unit</option>
+        </select>
 
-    <select class="form-select my-2" id="unit" required>
-      <option value="">Select a unit</option>
-    </select>
+        <input type="date" class="form-control mb-3" id="date" required />
 
-    <input type="date" class="form-control my-2" id="date" required />
+        <button type="submit" class="btn btn-primary w-100">Reserve</button>
+      </form>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3">Reserve</button>
-  </form>
-</div>
+      <div id="success-msg" class="alert alert-success mt-3 d-none">Booking submitted successfully!</div>
+      <div id="error-msg" class="alert alert-danger mt-3 d-none">An error occurred. Please try again.</div>
+    </div>
+  </div>
 
-<script>
-  // Initialize Supabase
-  const SUPABASE_URL = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-  const SUPABASE_ANON_KEY = 'YOUR_ANON_KEY_HERE';
-  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  <script>
+    // ✅ Initialize Supabase
+    const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-  // Populate unit dropdown
-  async function loadUnits() {
-    const unitSelect = document.getElementById('unit');
-    const { data: units, error } = await supabase.from('units').select('id, name');
-
-    if (error) {
-      console.error('Error loading units:', error.message);
-      return;
+    // ✅ Populate unit options from Supabase
+    async function loadUnits() {
+      const { data, error } = await supabase.from('units').select('*');
+      if (error) {
+        console.error('Error loading units:', error);
+        return;
+      }
+      const unitSelect = document.getElementById('unit');
+      data.forEach(unit => {
+        const option = document.createElement('option');
+        option.value = unit.id;
+        option.textContent = unit.name;
+        unitSelect.appendChild(option);
+      });
     }
 
-    units.forEach(unit => {
-      const option = document.createElement('option');
-      option.value = unit.id; // UUID value
-      option.textContent = unit.name;
-      unitSelect.appendChild(option);
+    // ✅ Handle form submission
+    document.getElementById('booking-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const address = document.getElementById('address').value.trim();
+      const unitId = document.getElementById('unit').value;
+      const date = document.getElementById('date').value;
+
+      if (!unitId) {
+        alert("Please select a unit from the dropdown.");
+        return;
+      }
+
+      const { error } = await supabase.from('bookings').insert([
+        {
+          name,
+          phone,
+          email,
+          address,
+          unit_id: unitId,
+          date
+        }
+      ]);
+
+      if (error) {
+        console.error('Booking failed:', error);
+        document.getElementById('error-msg').classList.remove('d-none');
+        document.getElementById('success-msg').classList.add('d-none');
+      } else {
+        document.getElementById('booking-form').reset();
+        document.getElementById('success-msg').classList.remove('d-none');
+        document.getElementById('error-msg').classList.add('d-none');
+      }
     });
-  }
 
-  loadUnits();
-
-  // Handle booking submission
-  document.getElementById('booking-form').addEventListener('submit', async (e) => {
-    e.preventDefault();
-
-    const name = document.getElementById('name').value.trim();
-    const phone = document.getElementById('phone').value.trim();
-    const email = document.getElementById('email').value.trim();
-    const address = document.getElementById('address').value.trim();
-    const unit = document.getElementById('unit').value;
-    const date = document.getElementById('date').value;
-
-    if (!unit) {
-      alert('Please select a unit');
-      return;
-    }
-
-    const { error } = await supabase.from('bookings').insert([
-      { name, phone, email, address, unit, date }
-    ]);
-
-    if (error) {
-      console.error('Supabase insert error:', error.message);
-      alert('Booking failed. Please try again.');
-    } else {
-      alert('Booking successful!');
-      document.getElementById('booking-form').reset();
-    }
-  });
-</script>
+    // ✅ Load units on page load
+    loadUnits();
+  </script>
 
 </body>
 </html>
