--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
       <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
       <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
       <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
-
       <select id="unit" class="form-select mb-2" required>
         <option value="" disabled selected>Select a unit</option>
       </select>
-
-      <input type="date" id="date" class="form-control mb-3" required min="<?= new Date().toISOString().split('T')[0] ?>" />
-
+      <input type="date" id="date" class="form-control mb-3" required />
       <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
@@ -67,27 +64,32 @@
   <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    document.addEventListener('DOMContentLoaded', async () => {
+      // Fix: Set today's date as the minimum in date picker
+      const today = new Date().toISOString().split('T')[0];
+      document.getElementById('date').setAttribute('min', today);
 
-    async function loadUnits() {
-      const { data, error } = await supabase.from('units').select('*');
-      const unitSelect = document.getElementById('unit');
-      if (data) {
-        data.forEach(unit => {
-          const option = document.createElement('option');
-          option.value = unit.id;
-          option.textContent = unit.name;
-          unitSelect.appendChild(option);
-        });
-      } else {
-        console.error('Error loading units:', error);
+      // Initialize Supabase client
+      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
+      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+      async function loadUnits() {
+        const { data, error } = await supabase.from('units').select('*');
+        const unitSelect = document.getElementById('unit');
+        if (data) {
+          data.forEach(unit => {
+            const option = document.createElement('option');
+            option.value = unit.id;
+            option.textContent = unit.name;
+            unitSelect.appendChild(option);
+          });
+        } else {
+          console.error('Error loading units:', error);
+        }
       }
-    }
 
-    document.addEventListener('DOMContentLoaded', () => {
-      loadUnits();
+      await loadUnits();
 
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
@@ -105,7 +107,7 @@
           .eq('unit_id', unit_id)
           .eq('date', date);
 
-        if (existing.length > 0) {
+        if (existing && existing.length > 0) {
           document.getElementById('errorMessage').style.display = 'block';
           document.getElementById('successMessage').style.display = 'none';
           return;
